    - New WebKdcLocalRealms and WebKdcPermittedRealms mod_webkdc options.
    - New WebKDC protocol error for a login rejected by policy.
    - New err_rejected variable in the weblogin login.tmpl template.
    - Several new WebLogin configuration options and hooks.
    - WebLogin REMOTE_USER variables have been renamed for consistency,
      but the old variables will continue to work.

 -- Russ Allbery <rra@debian.org>  Fri, 21 Mar 2008 22:10:09 -0700

webauth (3.5.5-1) unstable; urgency=low

  * New upstream release.
    - Check browser cookie support on first WebLogin visit for better
      cookie checks with Apache authentication.  (Closes: #430486)
    - New err_cookies_disabled error template variable.
    - Fix memory allocation for environment variables in mod_webauthldap.
    - Improve display of Shibboleth destination URLs.
  * Incorporate NEWS.Debian into webauth-weblogin.NEWS, since it is the
    only affected package for the old news item.
  * Call dh_fixperms before dh_strip so that the WebAuth Perl module will
    be stripped properly.
  * Recommend httpd-cgi and suggest libapache2-mod-auth-kerb for
    webauth-weblogin.
  * Use ${binary:Version} instead of ${Source-Version} in debian/control.
  * Move the Homepage pseudo-header from Description to a real header.
  * Wrap all Depends lines in debian/control.
  * Drop the version on the Perl build-depends.  That version is older
    than oldstable.
  * libwebkdc-perl is arch-independent, so no need for ${shilbs:Depends}.
  * Use a configure-stamp file rather than config.status.
  * Capitalize WebLogin consistently in package descriptions.
  * Update standards version to 3.7.3 (no changes required).
  * Update debhelper compatibility level to V5 (no changes required).

 -- Russ Allbery <rra@debian.org>  Tue, 08 Jan 2008 22:00:03 -0800

webauth (3.5.4-1) unstable; urgency=low

  * New upstream release.
    - WebLogin supports displaying destination Shibboleth URLs.